# benchmanager-frappe

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  entrypoint-aio.sh  nginx.conf  pyproject.toml  recover_js.py  requirements.txt  setup-bench-manager.sh  setup-page.html  setup.py  supervisord.conf  test_gunicorn.py
.github/workflows/: ci-cd.yml
bench_manager/: __init__.py  api.py  fix_module.py  fix_workspace.py  hooks.py  modules.txt  notification.py  patches.txt  test_api.py  test_api2.py  test_jobs.py  utils.py
bench_manager.egg-info/: PKG-INFO  SOURCES.txt
bench_manager/bench_manager/: __init__.py
bench_manager/bench_manager/doctype/bench_app/: __init__.py  bench_app.json  bench_app.py
bench_manager/bench_manager/doctype/bench_command_log/: __init__.py  bench_command_log.json  bench_command_log.py
bench_manager/bench_manager/doctype/bench_settings/: __init__.py  bench_settings.json  bench_settings.py
bench_manager/bench_manager/doctype/bench_site/: __init__.py  bench_site.json  bench_site.py
bench_manager/bench_manager/doctype/db_test/: db_test.js  db_test.json  db_test.py  test_db_test.py
bench_manager/bench_manager/doctype/whatomate/: test_whatomate.py  whatomate.js  whatomate.json  whatomate.py
bench_manager/bench_manager/doctype/whatsapp_lead/: test_whatsapp_lead.py  whatsapp_lead.js  whatsapp_lead.json  whatsapp_lead.py
bench_manager/bench_manager/page/bench_dashboard/: bench_dashboard.css  (+3 more)
docs/technical/: application_overview.md  multi_site_handling.md  terminal_commands_ui.md  vscode_integration.md
(+2 files in other folders)
