[project]
name = "bench_manager"
authors = [
    { name = "Praveen", email = "admin@example.com" }
]
description = "A Frappe app to manage Bench operations via GUI"
requires-python = ">=3.10"
readme = "README.md"
version = "0.0.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.bench.frappe-app]
